<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eb.project.WelfareActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textWelfareTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#15dfa6"
        android:textStyle="bold" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/buttonWalfareCancel"
        android:id="@+id/welfareCancelButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/availableNumberWelfareTitle"
        android:id="@+id/availableNumberWelfareTitle"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/availableNumberWelfare"
        android:id="@+id/availableNumberWelfare"
        android:layout_marginTop="32dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#787878"
        android:layout_below="@+id/availableNumberWelfareTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CurrentNumberWelfareTitle"
        android:id="@+id/currentNumberWelfareTitle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/currentNumberWelfare"
        android:id="@+id/currentNumberWelfare"
        android:layout_marginTop="29dp"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_below="@+id/currentNumberWelfareTitle"
        android:layout_centerHorizontal="true"
        android:textColor="#9163cc" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/approveButtonWelfare"
        android:id="@+id/approveButtonWelfare"
        android:layout_alignParentBottom="true"
        android:onClick="onClick" />

</RelativeLayout>
