<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eb.project.MainActivity">

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextUserLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:fontFamily="helvetica-light"
        android:singleLine="false"
        android:text="@string/textSignIn"
        android:textColor="#232323"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:backgroundTint="#ff6624"
        android:fontFamily="Helvetica-light"
        android:hint="@string/userLogin"
        android:inputType="number"
        android:singleLine="false"
        android:text="@string/editTextUserLogin"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editTextUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextUserLogin"
        android:layout_marginTop="13dp"
        android:backgroundTint="#ff6624"
        android:ems="10"
        android:fontFamily="Helvetica"
        android:hint="Hasło"
        android:inputType="textPassword"
        android:singleLine="false"
        android:text="@string/editTextUserPassword"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_border"
        android:fontFamily="Helvetica-light"
        android:onClick="onClick"
        android:singleLine="false"
        android:text="@string/buttonSignIn"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@mipmap/logo_mobi_orange"
        android:layout_alignEnd="@+id/textSignIn"
        android:layout_alignStart="@+id/textSignIn" />
</RelativeLayout>
